Time: 3 ms (97.88%) | Memory: 47.4 MB (41.41%) - LeetSync